conifg api-gateway

--- a/API-GateWay/appsettings.json
+++ b/API-GateWay/appsettings.json
@@ -1,9 +1,32 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "AllowedHosts": "*",
+   
+   "ReverseProxy": {
+      "Routes": {
+         "users-service-route": {
+            "ClusterId": "users-service-cluster",
+            "Match": {
+               "Path": "/users-service/{**catch-all}"
+            },
+            "Transforms": [
+               { "PathPattern": "{**catch-all}" }
+            ]
+         }
+      },
+      "Clusters": {
+         "users-service-cluster": {
+            "Destinations": {
+               "destination1": {
+                  "Address": "http://localhost:1270/api/"
+               }
+            }
+         }
+      }
+   }
 }
