--- a/API-GateWay/API-GateWay.csproj
+++ b/API-GateWay/API-GateWay.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Consul" Version="1.7.14.7" />
         <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.11.1" />
         <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.5.1" />
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.11.0-beta.1" />
