--- a/API-GateWay/appsettings.json
+++ b/API-GateWay/appsettings.json
@@ -7,6 +7,14 @@
    },
    "AllowedHosts": "*",
    
+   "GitHub": {
+      "ClientId": "Ov23liyEDf43mNu1YkRQ",
+      "ClientSecret": "9b7ca12438516a859c21f5c1ba8ece787853a1ee",
+      "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
+      "TokenEndpoint": "https://github.com/login/oauth/access_token",
+      "UserInformationEndpoint": "https://api.github.com/user"
+   },
+
    "ReverseProxy": {
       "Routes": {
          "users-service-route": {
@@ -27,6 +35,6 @@
                }
             }
          }
-      }
+      }     
    }
 }
