--- a/API-GateWay/Properties/launchSettings.json
+++ b/API-GateWay/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "api/auth/login-github",
       "applicationUrl": "https://localhost:7277;http://localhost:5158",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
