--- a/API-GateWay/Properties/launchSettings.json
+++ b/API-GateWay/Properties/launchSettings.json
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5158",
+      "launchUrl": "signin-google",
+      "applicationUrl": "http://localhost:7277",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,8 +22,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "api/auth/login-github",
+      "launchBrowser": false,
+      "launchUrl": "",
       "applicationUrl": "https://localhost:7277;http://localhost:5158",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
