--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,9 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+   "Eureka": {
+      "Client": {
+         "ServiceUrl": "http://localhost:8761/eureka/"
+      },
+      "Instance": {
+         "AppName": "UserService",
+         "InstanceId": "UserService-${random.value}",
+         "PreferIpAddress": true,
+         "LeaseRenewalIntervalInSeconds": 30,
+         "LeaseExpirationDurationInSeconds": 90
+      }
+   },
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "AllowedHosts": "*"
 }
