--- a/API-GateWay/appsettings.json
+++ b/API-GateWay/appsettings.json
@@ -9,7 +9,7 @@
    "AllowedHosts": "*",
    
    "ConnectionStrings": {
-      "ECP_DATABASE": "Host=localhost;Port=5432;Database=ECP_DB;Username=postgres;Password=168"
+      "ECP_DATABASE": "Host=192.168.100.14;Port=5432;Database=ECP_DB;Username=postgres;Password=#@123"
    },
    
    "Jwt": {
