--- a/API-GateWay/Dockerfile
+++ b/API-GateWay/Dockerfile
@@ -1,24 +1,24 @@
-# Create a stage for building the application.
-# Use the official .NET 8 SDK image to build the app
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-
-# Set the working directory in the container
+﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
 WORKDIR /app
-
-# Copy the .csproj file and restore dependencies (via dotnet restore)
-COPY *.csproj ./
-RUN dotnet restore
-
-# Copy the rest of the code and build the app
-COPY . ./
-RUN dotnet publish -c Release -o out
-
-# Generate the final image using the .NET 8 runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-WORKDIR /app
-COPY --from=build /app/out ./
-
-# Expose the port the app runs on
 EXPOSE 8080
+EXPOSE 8081
 
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["API-GateWay.csproj", "./"]
+COPY ["../Library/Library.csproj", "../Library/"]
+RUN dotnet restore "API-GateWay.csproj"
+COPY . .
+WORKDIR "/src/"
+RUN dotnet build "API-GateWay.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "API-GateWay.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "API-GateWay.dll"]
