--- a/API-GateWay/Properties/launchSettings.json
+++ b/API-GateWay/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "signin-google",
+      "launchBrowser": false,
+      "launchUrl": "",
       "applicationUrl": "http://localhost:7277",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
