--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,21 +1,13 @@
 {
-   "Eureka": {
-      "Client": {
-         "ServiceUrl": "http://localhost:8761/eureka/"
-      },
-      "Instance": {
-         "AppName": "UserService",
-         "InstanceId": "UserService-${random.value}",
-         "PreferIpAddress": true,
-         "LeaseRenewalIntervalInSeconds": 30,
-         "LeaseExpirationDurationInSeconds": 90
-      }
-   },
    "Logging": {
       "LogLevel": {
          "Default": "Information",
          "Microsoft.AspNetCore": "Warning"
       }
    },
-   "AllowedHosts": "*"
+   "AllowedHosts": "*",
+
+   "ConnectionStrings": {
+      "ECP_USER_DB": "Host=192.168.100.14;Port=5432;Database=ECP_USER_DB;Username=postgres;Password=#@123"
+   }
 }
